part-3/4-modify-response-headers/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: app-virtual-service-response-headers
spec:
    hosts:
        - "response-headers.box"
    gateways:
        - app-gateway
    http:
        - route:
              - destination:
                    host: app-v1-service
                    subset: v1
                    port:
                        number: 3000
                headers:
                    response:
                        add:
                            x-do-cache: "true"
